fixed spacing

--- a/twentyeleven-child-lsecities-urbanage/stylesheets/style.css
+++ b/twentyeleven-child-lsecities-urbanage/stylesheets/style.css
@@ -211,7 +211,7 @@ footer ul { list-style-type: none; }
 }
 
 .event-programme .sessiontype-day:first-child {
-  margin-top: inherit;
+  margin-top: 2em;
 }
 
 /*/mediaquery*/
